# chat-style-changer

./: .gitignore  README.md
chat_style_changer/server/: pyproject.toml
chat_style_changer/server/app/: main.py
chat_style_changer/server/app/api/: api.py  svc_container.py  vector_store.py
chat_style_changer/server/app/config/: config.py
chat_style_changer/server/app/infra/: embedding.py  llm.py  message_parser.py  rag.py  vector_store.py
chat_style_changer/server/app/models/: message.py
chat_style_changer/server/app/services/: async_vector_loader.py  speech_style_converter.py
chat_style_changer/web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
chat_style_changer/web/src/: App.tsx
chat_style_changer/web/src/component/: ChangeChatStylePage.tsx  SideBar.tsx  SwaggerPage.tsx  VectorStorePage.tsx
chat_style_changer/web/src/config/: Cofig.tsx
